2005-12-02  James Turner  <james@worldforge.org>

	* Add X-Code 2.0 project file (ProjectBuilder project will be deleted
	  shortly).
	  	  
2005-09-22  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/atlasconv.h: If a quaternion is initialised with values
	  which would make it normalise with division by zero, mark
	  as invalid and return.

2005-06-11  Al Riddoch  <alriddoch@zepler.org>

	* wfmath.spec.in: Minor changes to spec.

	* NEWS: Update NEWS.

	* Release 0.3.4

2005-04-30  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/Makefile.am: Don't force compilation with -O2. There are
	  good reasons not to.

	* configure.ac: Update autoconf usage.

	* acinclude.m4: Remove unused AM_PATH_ATLAS, and add required
	  pkg-config macro.

2005-04-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Fix a bug in initialising the version to a non-literal.

	* doc/Doxyfile.in: Use VERSION instead of WFMATH_VERSION as intended by
	  autoconf.

2005-04-11  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version to 0.3.4 for release, and clean
	  up a bit.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* wfmath.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

Sunday, October 10th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Changed CXXFLAGS to AM_CXXFLAGS in the atlas
	  Makefile.am to fix a configure warning.
	* Change a comma operator in an assert() to && to
	  fix a compile warning.

Saturday, October 9th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Added missing 'inline' keywords in int_to_string.h.

2004-07-19  Al Riddoch  <alriddoch@zepler.org>

	* Minor update to the rpm spec. No need to re-spin the release.

Wednesday, July 19th, 2004   Ron Steinke <rsteinke@w-link.net>

	* 0.3.3 release.

Wednesday, June 30th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Erik Hjortsberg's gcc 3.4 compile fixes, part 2.

Wednesday, June 30th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Erik Hjortsberg's gcc 3.4 compile fixes.
